sphiderass/src/App.scss
// /* App.scss */
@font-face {
  font-family: "graffit";
  src: url("Font/grifterbold.otf") format("truetype");
}
@font-face {
  font-family: "Raino sans";
  src: url("Font/Raino sans.otf") format("truetype");
}

:root {
  --background-light-mode: #f6f6f6; /* grey */
  --blog-light-background: #3d3d3d; /* Gray */
  --light-mode-white-text: #ffffff; /* Yellow */
  --dark-mode-dark-text: #000000;
  --ark-modes: #e7e7e7;
}

.sun {
  color: var(--dark-mode-dark-text);
}

.moon {
  color: var(--dark-mode-dark-text);
}

.banner-section {
  padding: 20px;
  color: #333;
}

.banner-section.light {
  background-color: #f6f6f6;
  color: var(--background-light-mode);
}

.banner-section.dark {
  background: var(--dark-mode-dark-text);
  color: #fff;
}

.index-page-banner-container.dark {
  color: #000;
}

.index-page-banner-container.light {
  color: #fff;
}

.banner-image.dark {
  background: var(--dark-mode-dark-text);
}

.banner-image.light {
  background-color: var(--background-light-mode);
}

.index-page-banner-container img {
  margin-top: 20px;
  width: 40px;
  height: auto;
}

.banner-text {
  margin-top: 20px;
}

.banner-head-text {
  font-size: 2rem;
  font-weight: bold;
}

.banner-button {
  margin-top: 20px;
}

.index-page-banner-mouse-icon {
  width: 30px;
  height: auto;
}

.index-page-services-section {
  background-color: var(--background-light-mode);
  &.dark {
    background-color: var(--dark-mode-dark-text) !important;
  }
  &.ligth {
    background-color: var(--background-light-mode);
  }
}
.page-width {
  width: calc(100% - 8rem);
  padding: 20px 20px;
  margin: 0 auto;
  background-color: var(--background-light-mode);

  &.dark {
    background-color: var(--dark-mode-dark-text) !important;
  }
  &.ligth {
    background-color: var(--background-light-mode);
  }
}
.sd-text {
  color: var(--dark-mode-dark-text);
  &.dark {
    color: var(--background-light-mode);
  }
  &.ligth {
    color: var(--dark-mode-dark-text) !important;
  }
}
.services-footer {
  background-color: var(--background-light-mode);
  &.dark {
    background-color: var(--dark-mode-dark-text) !important;
  }
  &.ligth {
    background-color: var(--background-light-mode);
  }
  .svf-text {
    color: var(--dark-mode-dark-text);
    &.dark {
      color: var(--background-light-mode);
    }
    &.ligth {
      color: var(--dark-mode-dark-text) !important;
    }
  }
}

.portfolio-cover {
  background-color: var(--background-light-mode);
  &.dark {
    background-color: var(--dark-mode-dark-text) !important;
  }
  &.ligth {
    background-color: var(--background-light-mode);
  }
  .pc-footer-text {
    color: var(--dark-mode-dark-text);
    &.dark {
      color: var(--background-light-mode);
    }
    &.ligth {
      color: var(--dark-mode-dark-text) !important;
    }
  }
}

/*
        navbar-styles
*/
.navbar {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.light-navbar {
}

.nav-con {
  display: flex;
  background: #fafafa;
  justify-content: space-between;
  align-items: center;
  border-radius: 40px;
  padding: 5px 10px;
  box-shadow: 0px 18px 40px 0px rgba(255, 254, 254, 0.1);
}

.light-nav-con {
  box-shadow: 0px 18px 40px 0px rgba(0, 0, 0, 0.1);
  display: flex;
  background: #ffffff;
  justify-content: space-between;
  align-items: center;
  border-radius: 40px;
  padding: 5px 10px;
}

.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 15px;
  margin-right: 30px;
}

.logo img {
  width: 100%;
  height: 20px;
}

.nav-list-con {
  display: flex;
  list-style: none;
  justify-content: center;
  gap: 40px;
}

.nav-list {
  text-decoration: none;
  color: #000000;
  font-weight: 300;
}

.nav-list-con ul {
  padding: 3px;
}

.nav-list-con li {
  position: relative;
  cursor: pointer;
  width: fit-content;
  list-style: none;
  font-size: 17px;
  font-family: "Instrument Sans", sans-serif;
}

.nav-list-con li::after {
  content: "";
  position: absolute;
  left: 0;
  width: 100%;
  bottom: -4px;
  height: 2px;
  background: currentColor;
  transform: scaleX(0);
  transition: transform 200ms ease-in-out;
}

.nav-list-con li:hover::after {
  color: #404040;
  transform: scaleX(1);
}

.nav-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15px;
  margin-left: 70px;
}

.nvp {
  margin: 0.5rem;
}

.nav-buttons p button {
  background: #003700;
  cursor: pointer;
  border-radius: 35px;
  padding: 15px 25px;
  font-size: 17px;
  border: none;
  font-family: "Instrument Sans", sans-serif;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

.search-icon {
  font-size: 28px;
  cursor: pointer;
  font-weight: 700;
  color: #bb7401;
}

.nvb-arrow {
  text-align: center;
}
.banner-section {
  position: relative;
}

.banner-image {
  width: 100%;
  height: 100%;
  background-color: var(--background-light-mode);
  transition-duration: 1000ms;
}

.nav-placement {
  padding: 10px;
}

.index-page-banner-container {
  padding: 70px 30px;
}

.banner-text {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 0;
}

.banner-text p button {
  width: 140px;
  height: 50px;
  border-radius: 25px;
  border: none;
  font-size: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

.banner-text p {
  padding: 10px;
  margin: 0;
}

.banner-head-text {
  font-weight: 500;
  font-size: 45px;
  text-align: center;
  letter-spacing: 3px;
  width: 80%;
  line-height: 54px;
  font-family: "graffit";
  color: #000000;
}

.index-page-banner-experience-span {
  color: #e1b023;
}

.banner-subhead-text {
  font-size: 1rem;
  margin-top: 10px;
  &.dark {
    color: var(--light-mode-white-text);
  }

  &.light {
    color: var(--dark-mode-dark-text);
  }
}
/* ... */

